Removed footer and header files and JS for it, fixed footer on Firefox

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -19,7 +19,7 @@ $header-desktop-height: 10vh;
     margin: 0;
     padding: 0;
     color: $primary-text-color;
-    
+
     font-family: 'Roboto Mono', monospace;
     -webkit-overflow-scrolling: scroll;
     scroll-behavior: smooth;
@@ -109,6 +109,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     -webkit-text-fill-color: $primary-background-color !important;
 }
 
+/* TODO: See if these two are still being used */
 header .test {
     display: none;
 }
@@ -191,17 +192,10 @@ footer {
     font-size: 0.7em;
     height: $footer-mobile-height;
     
-    nav a {
-        font-size: 1.15em;
-        margin: 0em 7.3em;
-
-        div {
-            padding-top: 0.4em;
-        }
-    }
-
     nav li {
-        //font-size: 1.25em;
+        font-size: 1.15em;
+        margin: 0 1.3em;
+        padding-top: 0.6em;
     }
 }
 
@@ -238,11 +232,11 @@ footer {
     h1 {
         font-size: 5em;
     }
-    
+
     h2 {
         font-size: 2.5em;
     }
-    
+
     .mobile-only {
         display: none;
     }
@@ -259,13 +253,13 @@ footer {
             font-size: 16px;
         }
     }
-    
+
     @media (min-width: 2300px) and (max-width: 3199px) {
         body {
             font-size: 24px;
         }
     }
-    
+
     @media (min-width: 3200px) {
         body {
             font-size: 32px;
